--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -7,10 +7,20 @@ output:
 
 
 ## Loading and preprocessing the data
+In keeping with the project instructions, the following code loads and provides the initial processing of the data.  
 
+```{r}
+if(!file.exists("./data")) {dir.create("./data")}
 
+sourceFile <- "activity.zip"
+if(file.exists(sourceFile)) { unzip(sourceFile, exdir="./data") }
+
+outFile  <- "./data/activity.csv"
+if (exists("df") == FALSE) { df <- read.csv(outFile) }
+```
 
 ## What is mean total number of steps taken per day?
+```{r}
 
 
 
