--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -26,7 +26,6 @@ In keeping with the project instructions, the following code loads and provides 
 if(!file.exists("./data")) {dir.create("./data")}
 unzip("activity.zip", exdir="./data")
 df <- read.csv("./data/activity.csv") 
-idf <- df %>% group_by(interval) %>% mutate(ic = ntile(interval, 288))
 ```
 
 ## What is mean total number of steps taken per day?
@@ -58,7 +57,7 @@ The analysis of the total number of steps per day showed the **mean** to be `r m
 
 The following is a time series plot of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
 ```{r interval_steps}
-sdf <- idf %>% group_by(ic) %>% summarise(istp = mean(steps, na.rm = TRUE))
+sdf <- df %>% group_by(interval) %>% summarise(istp = mean(steps, na.rm = TRUE))
 names(sdf) <- c("Interval", "Steps")
 g <- ggplot(sdf, aes(x = Interval, y = Steps)) +
     geom_line(stat = "identity")
@@ -74,13 +73,26 @@ Interval `r mx` had the highest mean for number of steps.
 > 3. Create a new dataset that is equal to the original dataset but with the missing data filled in.  
 > 4. Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
 
-```{r}
+```{r naCount}
 na_cnt <- sum(is.na(df$steps))
-
-nona_df <- df
 ```
 
-There are `r na_cnt` intervals with no steps recorded. 
+There are `r na_cnt` intervals with no steps recorded. When these are replaced with the overall mean for that interval, the following is seen.
+
+```{r withNoNa}
+mdf <- df %>% group_by(interval) %>% mutate(mstep = mean(steps, na.rm = TRUE))
+nona_df <- mdf
+head(nona_df,10)
+nona_df$steps <- ifelse(is.na(nona_df), nona_df$sm, nona_df$steps)
+# nona_df$date <- ymd(nona_df$date)
+# names(nona_df) <- c("Date","Steps")
+# g <- ggplot(nona_df, aes(x = Date, y = Steps)) +
+#     geom_histogram(stat = "identity")
+# print(g)
+na_mn <- mean(nona_df$Steps, na.rm = TRUE)
+na_md <- median(nona_df$Steps, na.rm = TRUE)
+```
+The analysis of the total number of steps per day with imputed values for NA showed the **mean** to be `r na_mn` and the **median** to be `r na_md`.
 
 
 ## Are there differences in activity patterns between weekdays and weekends?
