--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -7,43 +7,21 @@ output:
 
 The following libraries were used in this effort.
 
-```{r load_libs}
-options(scipen=1, digits=2)
+```{r load_libs, message=F, warning=F}
+options(scipen=1, digits=2)  # settings to control number formatting
 require(dplyr)
 require(ggplot2)
 require(lubridate)
-require(reshape2)
 ```
 
 ## Loading and preprocessing the data
-
-The following code loads and provides the initial processing of the data. The analyses required for this project need various alternative data structures, These alternatives are build here.
-
-```{r}
+```{r process_data}
 if(!file.exists("./data")) {dir.create("./data")}
 unzip("activity.zip", exdir="./data")
+
 # base data set with date column converted to date type
 df <- read.csv("./data/activity.csv") 
 df$date <- ymd(df$date)
-
-# count by date
-dte_df <- df %>% group_by(date) %>% summarise(steps = sum(steps))
-
-# average steps by interval
-intv_df <- df %>% group_by(interval) %>% summarise(steps = mean(steps, na.rm = TRUE))
-
-# imputed NA data frame
-na_df <- df %>% group_by(interval) %>% mutate(mstep = mean(steps, na.rm = TRUE))
-na_df$steps <- ifelse(is.na(na_df$steps), na_df$mstep, na_df$steps)
-nona_df <- na_df %>% group_by(date) %>% summarise(steps = sum(steps))
-
-# Weekend factor added to base data frame
-wk_df <- na_df %>%
-    mutate(weekend = ifelse(weekdays(date, abbreviate = TRUE) %in% c("Sun","Sat"), 
-                            "weekend",
-                            "weekday"))
-wk_df$weekend <- as.factor(wk_df$weekend)
-wk_df <- wk_df %>% group_by(weekend, interval) %>% summarise(steps = mean(steps, na.rm = TRUE))
 ```
 
 ## What is mean total number of steps taken per day?
@@ -51,58 +29,103 @@ wk_df <- wk_df %>% group_by(weekend, interval) %>% summarise(steps = mean(steps,
 The distribution of the mean total number of steps per day is shown in the histogram below.
 
 ```{r daily_steps, warning=FALSE}
+# data frame created for count by date
+dte_df <- df %>% group_by(date) %>% summarise(steps = sum(steps))
+
+# now plot the histogram
 g1 <- ggplot(dte_df, aes(x = date, y = steps)) +
     geom_histogram(stat = "identity", fill = "red", colour = "red") +
     ggtitle("Mean Total Number of Steps per Day") +
     xlab("Date") +
     ylab("Number of Steps")
 print(g1)
-mn <- mean(dte_df$steps, na.rm = TRUE)
-md <- median(dte_df$steps, na.rm = TRUE)
+
+# find mean and median for number of steps
+dy_mn <- mean(dte_df$steps, na.rm = TRUE)
+dy_md <- median(dte_df$steps, na.rm = TRUE)
+dy_sd <- sd(dte_df$steps, na.rm = TRUE)
 ```
 
-The analysis of the total number of steps per day showed the **mean** to be `r mn` and the **median** to be `r md`.
+The analysis of the total number of steps per day showed the **mean** to be `r dy_mn`  (with a standard deviation of `r dy_sd`) and the **median** to be `r dy_md`.
 
 ## What is the average daily activity pattern?
 
 The following is a time series plot of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis).
 
 ```{r interval_steps}
+#  data frame created to average steps by interval
+intv_df <- df %>% group_by(interval) %>% summarise(steps = mean(steps, na.rm = TRUE))
+
+# now plot the time series
 g2 <- ggplot(intv_df, aes(x = interval, y = steps)) +
     geom_line(stat = "identity", colour = "red", size = 1) +
     ggtitle("Average Number of Steps per Interval") +
     xlab("Interval") +
     ylab("Number of Steps")
 print(g2)
-mx <- intv_df %>% arrange(desc(steps)) %>% top_n(1) %>% select(interval)
+
+# find interval with highest average number of steps
+intv_mx <- intv_df %>% arrange(desc(steps)) %>% top_n(1) %>% select(interval)
 ```
-Interval `r mx` had the highest mean for number of steps.
+
+Interval `r intv_mx` had the highest mean for number of steps.
+
 
 ## Imputing missing values
 
 ```{r naCount}
+# determines number of NA in the base data frame
 na_cnt <- sum(is.na(df$steps))
 ```
 
-There are `r na_cnt` intervals with no steps recorded. When these are replaced with the overall mean for that interval, the following is seen.
+There are `r na_cnt` intervals with no steps recorded. 
+
+My strategy for imputing values for the NAs was to use the mean for the 5-minute interval.  I first created an additional column to hold the mean for the 5-minute interval and then replaced the NAs with the corresponding interval mean.  The results from these are replacements is seen in the following time series.
 
 ```{r withNoNa}
+#  data frame created with imputed NA data frame
+#  --- first add a new column with the interval mean
+
+na_df <- df %>% group_by(interval) %>% mutate(mstep = mean(steps, na.rm = TRUE))
+
+#  --- now assign interval mean instead of NA
+na_df$steps <- ifelse(is.na(na_df$steps), na_df$mstep, na_df$steps)
+
+#  --- resulting data frame for average steps by interval
+nona_df <- na_df %>% group_by(date) %>% summarise(steps = sum(steps))
+
+# now plot the histogram
 g3 <- ggplot(nona_df, aes(x = date, y = steps)) +
     geom_histogram(stat = "identity", fill = "red", colour = "red") +
     ggtitle("Mean Total Number of Steps per Day") +
     xlab("Date") +
     ylab("Number of Steps")
 print(g3)
+
+# determines the mean and median
 na_mn <- mean(nona_df$steps)
 na_md <- median(nona_df$steps)
+na_sd <- sd(nona_df$steps)
 ```
-The analysis of the total number of steps per day with imputed values for NA showed the **mean** to be `r na_mn` and the **median** to be `r na_md`.
+
+The analysis of the total number of steps per day with imputed values for NA showed the **mean** to be `r na_mn` (with a standard deviation of `r na_sd`) and the **median** to be `r na_md`.  While the mean with imputed values for NAs is the same as the mean with NAs, the standard deviation is smaller.
 
 
 ## Are there differences in activity patterns between weekdays and weekends?
 
+```{r itsTheWeekend}
+# data frame created for weekend to weekday comparison
+# --- Weekend factor added to base data frame
+wk_df <- na_df %>%
+    mutate(weekend = ifelse(weekdays(date, abbreviate = TRUE) %in% c("Sun","Sat"), 
+                            "weekend",
+                            "weekday"))
+wk_df$weekend <- as.factor(wk_df$weekend)
 
-```{r}
+# --- resulting data from with average steps per weekend or weekday interval
+wk_df <- wk_df %>% group_by(weekend, interval) %>% summarise(steps = mean(steps, na.rm = TRUE))
+
+# now plot the time series
 g4 <- ggplot(wk_df, aes(x = interval, y = steps)) +
     geom_line(stat = "identity", colour = "red", size = 1) +
     facet_grid(weekend ~ .) +
@@ -110,6 +133,4 @@ g4 <- ggplot(wk_df, aes(x = interval, y = steps)) +
     xlab("Interval") +
     ylab("Number of Steps")
 print(g4)
-
-
 ```
